fix: keep keycloak role mapping java 11 compatible
Avoid Stream.toList so the UserService artifact builds with the project Java 11 target.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>